code clean up, fixed 400 error on IE

--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -58,10 +58,6 @@ form {
     @extend input:not([type=checkbox]):not([type=radio]);
     border-radius: 0;
     @extend %reset-webkit;
-    //little arrow image
-    // background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' width='32' height='24' viewBox='0 0 32 24'><polygon points='0,0 32,0 16,24' style='fill: rgb%2828, 117, 187%29'></polygon></svg>");
-    // -webkit-background-size: 9px 6px;
-    // background-size: 9px 6px;
     background-position: right -1rem center;
     -webkit-background-origin: content-box;
     background-origin: content-box;
@@ -110,7 +106,7 @@ form {
         width: 1rem;
         height: 1rem;
         left: 2px;
-        top: 2px;
+        top: 3px;
       }
     }
   }
@@ -190,7 +186,7 @@ form {
       &.current,
       &.previous {
         span {
-          font-weight: bold;
+          font-family: EYBold;
           color: #000;
         }
       }
